--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Musiklexikon</title>
+  <title>Tal der Könige</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,6 +12,6 @@
   
 </head>
 <body>
-  <mls-root></mls-root>
+  <tdk-root></tdk-root>
 </body>
 </html>
